--- a/index.html
+++ b/index.html
@@ -47,15 +47,24 @@
 		<div class="services">
 			<div class="service">
 				<img class="paper" src="./resources/images/paper-icon.png">
-				<p>Comprehensive Exams</p>
+				<div class="service-text">
+					<p>Comprehensive</p>
+					<p>Exams</p>
+				</div>
 			</div>
 			<div class="service">
-				<img class="rulers" src="./resources/images/ruler-icon.png">
-				<p>Custome Fittings</p>
+				<img class="ruler" src="./resources/images/ruler-icon.png">
+				<div class="service-text">
+					<p>Custom</p>
+					<p>Fittings</p>
+				</div>
 			</div>
 			<div class="service">
 				<img class="truck" src="./resources/images/truck-icon.png">
-				<p>Fast Delivery</p>
+				<div class="service-text">
+					<p>Fast</p>
+					<p>Delivery</p>
+				</div>
 			</div>
 		</div>
 		<!-- End Services Section -->
@@ -64,12 +73,20 @@
 		<!-- Begin Offerings Section -->
 		<div class="offerings">
 			<div class="offering">
-				<h3>PHILOSOPHY</h3>
-				<p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+				<div class="offering-title">
+					<h3>PHILOSOPHY</h3>
+				</div>
+				<div class="offering-text">
+					<p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+				</div>
 			</div>
 			<div class="offering">
-				<h3>APPOINTMENTS</h3>
-				<p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+				<div class="offering-title">
+					<h3>APPOINTMENTS</h3>
+				</div>
+				<div class="offering-text">
+					<p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+				</div>
 			</div>
 		</div>
 		<!-- Eng Offerings Section -->
