--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 							<li>Contact</li>
 						</ul>
 					</div>
+						<ul class="mobile-nav">
+							<li>Menu</li>
+						</ul>
 				</nav>
 				<!-- End Nav Section -->
 
@@ -71,21 +74,23 @@
 
 
 		<!-- Begin Offerings Section -->
-		<div class="offerings">
-			<div class="offering">
-				<div class="offering-title">
-					<h3>PHILOSOPHY</h3>
+		<div class="site-container">
+			<div class="offerings">
+				<div class="offering">
+					<div class="offering-title">
+						<h3>PHILOSOPHY</h3>
+					</div>
+					<div class="offering-text">
+						<p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+					</div>
 				</div>
-				<div class="offering-text">
-					<p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
-				</div>
-			</div>
-			<div class="offering">
-				<div class="offering-title">
-					<h3>APPOINTMENTS</h3>
-				</div>
-				<div class="offering-text">
-					<p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+				<div class="offering">
+					<div class="offering-title">
+						<h3>APPOINTMENTS</h3>
+					</div>
+					<div class="offering-text">
+						<p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -93,14 +98,14 @@
 
 
 		<!-- Begin Footer Section -->
-		<footer>
-			<div class="site-container">
+		<div class="site-container">
+			<footer>
 				<div class="footer-logo">
 					<img src="./resources/images/logo-black.png">
 					<span>Copyright Tortoiseshell Optics</span>
 				</div>
-			</div>
-		</footer>
+			</footer>
+		</div>
 		<!-- End Footer Section -->
 
 
